Align the brand image correctly

--- a/data/css/style.css
+++ b/data/css/style.css
@@ -16,6 +16,10 @@
 	color: inherit !important;
 }
 
+.brand-icon {
+	vertical-align: bottom;
+}
+
 .login-page {
 	max-width: 300px;
 }
